# llm-think-tag-strip-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/llm_think_tag_strip/: __init__.py
tests/: test_llm_think_tag_strip.py
